--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <!-- Required meta tags -->
@@ -11,12 +10,9 @@
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/29a13740e7.js"></script>
   <title>XML to CSV</title>
-
 </head>
-
 <body>
 <br>
-
   <div class="container h-100" style="border:1px solid #cecece;">
     <div class="row justify-content-md-center">
       <div class="col-md-8">
@@ -36,9 +32,7 @@
         {% endfor %}
         {% endif %}
         {% endwith %}
-
         <form class="" action="/" method="POST" enctype="multipart/form-data">
-
           <div class="form-group" onsubmit="myFunction()">
             <label>
               <small>
@@ -51,27 +45,21 @@
               <label class="custom-file-label" for="doc">Select file...</label>
             </div>
           </div>
-
-          <!-- <button type="submit" class="btn btn-primary"><i class="fa fa-spinner fa-spin"></i>Convert</button> -->
           <button class="btn btn-outline-dark btn-block" id="textChangingBtn" type="submit" name="button">
             <div id="" class="">
               Convert
             </div>
           </button>
         </form>
-
       </div>
     </div>
-
     <br>
     <div class="row justify-content-md-center">
       <div id="messageDiv" class="">
-
       </div>
     </div>
     <br>
     <div class="row justify-content-md-center">
-
       <div class="col-md-auto text-center">
           <img src="{{url_for('static',filename='img/xml_img.jpg')}}" class="img-responsive" style="max-width: 300px;"></div>
       <div class="col-md-auto text-center">
@@ -79,30 +67,21 @@
       <div class="col-md-auto text-center">
           <img src="{{url_for('static',filename='img/csv_img.jpg')}}" class="img-responsive" style="max-width: 500px;"></div>
     </div>
-
-
   </div>
-
-
+  <!-- JavaScript -->
   <script>
     document.getElementById("textChangingBtn").onclick = function() {
       document.getElementById("messageDiv").innerHTML = "<h3>Your download will begin shortly</h3>";
     }
   </script>
-
   <script>
     function filesize(elem) {
-      <
-      !--console.log(elem.files[0].size) -- >
         document.cookie = `filesize=${elem.files[0].size}`;
     }
   </script>
-
-  <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-
 </html>
